--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -12,6 +12,7 @@ html {
     -moz-background-size: 50%;
     -o-background-size: 50%;
     background-size:50%;
+    background-color:rgb(236, 229, 229);
   }
 
   /* Scrollbar stylings */
