--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -55,6 +55,10 @@ html {
     
 }
 
+.page-header{
+    height: 6vw;
+}
+
 /* header color */
 header{
     background-color: var(--darkback);
@@ -65,7 +69,7 @@ header{
 .nav-name{
     font-size: 3.6rem;
     float:left;
-    margin-top: 1.5vh;
+    margin-top: 2vh;
     padding-left: 3vw;
     background-color: var(--accentblue);
     border-radius: .2vw;
