adding in nav element and removing ul

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -56,7 +56,7 @@ html {
 }
 
 
-/* landing page stylings */
+/* Header and nav stylings */
 
 .page-header{
     height: 6vw;
@@ -100,12 +100,12 @@ header{
 }
 
 /* Active tab will be colored */
-.active a{
+.active{
     color: var(--accentblue);
 }
 
 /* active tab hover effect to turn back to white for visibility */
-.active a:hover{
+.active:hover{
     color:ghostwhite;
 }
 
