--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -138,5 +138,117 @@ header{
 
 /* content page stylings */
 
+.content-area{
+    margin: auto;
+    width: 65%;
+}
+
+
+/* rows of pcontent items positioning and dimensions */
+.content{
+ display:flex;
+ flex-direction: column;
+ margin-top: 3vw;
+ margin-bottom: 3vw;
+ gap: 3vw;
+}
+
+/* specific content item properties */
+.content-box-items{
+    position: relative;
+    height: 18vw;
+}
+
+
+/* content photo effects */
+.content-photos{
+    border-style: solid;
+    border-radius: 1vw;
+    border-color: var(--accentblue);
+    filter:saturate(40%);
+    transition-duration: .25s;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+/* positioning of captions on content photos */
+.bottom-left{
+    position: absolute;
+    bottom: 1vh;
+    left: .5vw;
+    padding-left: 20px;
+    padding-right: 20px; 
+    background-color: var(--accentblue);
+    border-radius: .5vw;
+}
+
+/* content photo caption sizing */
+.photo-caption-h{
+    font-size: 2.5rem;
+}
+
+.photo-caption-p{
+    font-size: 1.25rem;
+}
+
+/* content photos photo hover effect */
+.content-photos:hover{
+    filter:none;
+    transition-duration: .25s;
+}
+
 
 /* media queries */
+
+/* medium-small */
+/* @media (max-width: 800px){
+    .nav-name{
+     font-size: 2.5rem;
+    }
+
+    .photo-caption-h{
+        font-size: 1.5rem;
+    }
+
+    .photo-caption-p{
+        font-size: .8rem;
+    }
+
+} */
+
+
+/* small */
+/* @media (max-width: 640px){
+    .page-header{
+        display:flex;
+        flex-wrap: wrap;
+    }
+
+} */
+
+/* extra small */
+/* @media (max-width: 420px){
+    .page-header{
+        display:flex;
+        flex-wrap: wrap;
+    }
+
+    .nav-name{
+        font-size: 1.5rem;
+    }
+
+     .navitem{
+         font-size: 1.5rem;
+    }
+
+    .photo-caption-h{
+        font-size: 1.2rem;
+    }
+
+    .photo-caption-p{
+        font-size: .8rem;
+    }
+
+} */
