--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -135,7 +135,9 @@ header{
 
 /* entire section of cards positioning */
 .team-cards{
-
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
 
 }
 
@@ -146,7 +148,9 @@ header{
      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
      transition: 0.3s;
      border-radius: 5px; /* 5px rounded corners */
-     width:25%
+     width:25%;
+     margin:5vw;
+     padding: .5vw;
      
 }
 
@@ -166,7 +170,7 @@ header{
     width: 25vw;
 }
 
-/* positioning of live status of each player default is hidden unless api function turns on */
+/* positioning of live status of each player default is hidden unless api function turns on, will be done by ID not class */
 .live-status{
     display:none;
     position: absolute;
