--- a/assets/CSS/stylesheet.css
+++ b/assets/CSS/stylesheet.css
@@ -145,7 +145,7 @@ justify-content: center;
 .card{
      background-color: var(--transp-back);
      /* Add shadows to create the "card" effect */
-     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.37);
      transition: 0.3s;
      border-radius: 5px; /* 5px rounded corners */
      width:25%;
@@ -156,7 +156,7 @@ justify-content: center;
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.658);
   }
 
   /* card photo element */
