--- a/assets/CSS/stylesheet.css
+++ b/assets/CSS/stylesheet.css
@@ -206,7 +206,28 @@ justify-content: center;
     margin:2vw;
     padding: .5vw;
     display: none;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    overflow: auto; /* Enable scroll if needed */
 }
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
   /* info card photo element */
   .info-card-photo{
     position: relative;
