--- a/assets/CSS/stylesheet.css
+++ b/assets/CSS/stylesheet.css
@@ -204,9 +204,10 @@ justify-content: center;
     border-radius: 5px; /* 5px rounded corners */
     width:25%;
     margin:2vw;
+    /* bug1 */
     padding: .5vw;
     display: none;
-    /* modal positioning to be addressed after function active */
+    /* modal positioning to be addressed after function active bug3 */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
@@ -221,7 +222,7 @@ justify-content: center;
     font-size: 28px;
     font-weight: bold;
   }
-  /* address this after functionality active */
+  /* address this after functionality active bug2*/
   .close:hover,
   .close:focus {
     color: black;
