--- a/assets/CSS/stylesheet.css
+++ b/assets/CSS/stylesheet.css
@@ -196,6 +196,20 @@ justify-content: center;
     width: 10vw;
 }
 
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }  
+
 .info-card{
     background-color: var(--transp-back);
     /* Add shadows to create the "card" effect */
@@ -206,13 +220,6 @@ justify-content: center;
     margin:2vw;
     /* bug1 */
     padding: .5vw;
-    display: none;
-    /* modal positioning to be addressed after function active bug3 */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    overflow: auto; /* Enable scroll if needed */
 }
 
 /* The Close Button */
